[SPARK-58926] Address review: preserve SPARK_USER position, honor explicit override
Rework the driver SPARK_USER override in response to review feedback:

* Replace the SPARK_USER env entry in place so BasicDriverFeatureStep's
  ordering is preserved. Kubelet resolves $(VAR) only against variables
  earlier in the env list, so appending would break any
  spark.kubernetes.driverEnv.* value that references $(SPARK_USER)
  (e.g. HADOOP_USER_NAME=$(SPARK_USER)).
* Skip the override when the user explicitly set
  spark.kubernetes.driverEnv.SPARK_USER, so the explicit value wins
  over --proxy-user.
* Expand the javadoc to explain why proxyUser.doAs(...) alone would
  not fix the driver env (Utils.getCurrentUserName reads SPARK_USER
  before falling back to UGI, and the default Helm chart exports
  SPARK_USER=spark into the operator container), and to document the
  known Kerberos delegation-token limitation.
* Add tests covering the explicit-driverEnv override and position
  preservation; consolidate mock setup into helpers and look up the
  driver container by name.